[package]
name = "abacus"
version = "0.1.1"
authors = ["Nathan Brown <me@nathanbrown.dev>", "Francisco Gonzalez"]
description = "Vector Viz number crunching engine"
license = "MIT"
repository = "git+https://github.com/VectorViz/abacus"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"