[package]
name = "abacus"
version = "0.1.1"
authors = ["Nathan Brown <me@nathanbrown.dev>", "Francisco Gonzalez"]
description = "Vector Viz number crunching engine"
license = "MIT"
repository = "git+https://github.com/VectorViz/abacus"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.103"
web-sys = { version = "0.3.80", features = ["Window", "Document", "HtmlElement", "Text"] }
